# Opengl-GLFW

./: .gitignore  CMakeLists.txt  README.md  camera.h  font.h  glad.c  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture.cpp  texture.h
resources/skybox/: violentdays_dn.tga
shaders/: colors.fs.glsl  colors.gs.glsl  colors.vs.glsl  font.fs.glsl  font.vs.glsl  instance.fs.glsl  instance.vs.glsl  lamp.fs.glsl  normals.gs.glsl  normals.vs.glsl  plain.fs.glsl  plain.vs.glsl  simple.vs.glsl  skybox.vs.glsl
